--- a/src/styles.less
+++ b/src/styles.less
@@ -71,3 +71,27 @@ button, input {
   flex-direction: column;
   align-items: flex-end;
 }
+
+.tictactoe {
+  display: flex;
+  width: 153px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 16px;
+  
+  .row {
+    display: flex;
+    flex-direction: row;
+  }
+  .box {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+    text-align: center;
+    font-size: 40px;
+    cursor: default;
+    // padding-top: 50%;
+  }
+  
+
+}
